# OpenAPIReactClient/src/models/LogonSuccessMessageAllOf.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Password Manager
+ * This is a password manager server.
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: test@te.st
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LogonSuccessMessageAllOf
+ */
+export interface LogonSuccessMessageAllOf {
+    /**
+     * 
+     * @type {Date}
+     * @memberof LogonSuccessMessageAllOf
+     */
+    lastLogin?: Date | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof LogonSuccessMessageAllOf
+     */
+    failedLogins?: number;
+}
+
+export function LogonSuccessMessageAllOfFromJSON(json: any): LogonSuccessMessageAllOf {
+    return LogonSuccessMessageAllOfFromJSONTyped(json, false);
+}
+
+export function LogonSuccessMessageAllOfFromJSONTyped(json: any, ignoreDiscriminator: boolean): LogonSuccessMessageAllOf {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'lastLogin': !exists(json, 'lastLogin') ? undefined : (json['lastLogin'] === null ? null : new Date(json['lastLogin'])),
+        'failedLogins': !exists(json, 'failedLogins') ? undefined : json['failedLogins'],
+    };
+}
+
+export function LogonSuccessMessageAllOfToJSON(value?: LogonSuccessMessageAllOf | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'lastLogin': value.lastLogin === undefined ? undefined : (value.lastLogin === null ? null : value.lastLogin.toISOString()),
+        'failedLogins': value.failedLogins,
+    };
+}
+
+
